# test_task

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  images_logger  pyproject.toml
test_task/: __init__.py  conf.py  main.py
test_task/utils/: file_processing.py  image_processing.py
tests/: test_main.py
